# integra

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  build.sh  flake.nix  integra.cabal  result  shell.nix
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: 6ybfsxhnn7rm5h7c7n584ry9rnnqf58z-source
app/: Main.hs  Web.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-9.10.3/: integra-0.3.0.0-inplace.conf  integra-0.4.0.0-inplace.conf  integra-0.5.0.0-inplace.conf  integra-1.0.0.0-inplace.conf  package.cache
src/Integra/: AST.hs  Antiderivative.hs  Derive.hs  Evaluator.hs  Graph.hs  Numerical.hs  Parser.hs  Solver.hs  Special.hs  Token.hs
wasm/: Cargo.toml
wasm/.cargo/: config.toml
wasm/src/: antideriv.rs  ast.rs  calculus.rs  complex.rs  derive.rs  evaluator.rs  fractal.rs  graph.rs  lib.rs  parser.rs  solver.rs  token.rs
web/: .gitignore  _redirects  app.js  app.ts  astro.config.mjs  index.html  package-lock.json  package.json  style.css  tsconfig.json  wrangler.toml
web/.astro/: data-store.json  dev.json  settings.json
web/src/: repl.ts  wasm.d.ts
web/src/pages/: index.astro
