cabal-version:      3.0
name:               integra
version:            0.5.0.0
author:             aluoty
maintainer:         alexanderluo0910@gmail.com
license:            MIT
license-file:       LICENSE
category:           Math
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

library
    import:           warnings
    hs-source-dirs:   src
    exposed-modules:
        Integra.Token
        Integra.AST
        Integra.Parser
        Integra.Evaluator
        Integra.Numerical
        Integra.Solver
        Integra.Special
        Integra.Derive
        Integra.Graph
    build-depends:    base ^>=4.20.2.0
    default-language: Haskell2010

executable integra
    import:           warnings
    main-is:          Main.hs
    hs-source-dirs:   app
    build-depends:
        base     ^>=4.20.2.0,
        deepseq  ^>=1.5,
        integra,
        haskeline ^>=0.8,
        process  ^>=1.6
    default-language: Haskell2010
