cabal-version:      3.0
name:               integra
version:            1.0.0.0
author:             aluoty
maintainer:         alexanderluo0910@gmail.com
license:            MIT
license-file:       LICENSE
category:           Math
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

library
    import:           warnings
    hs-source-dirs:   src
    exposed-modules:
        Integra.Token
        Integra.AST
        Integra.Parser
        Integra.Evaluator
        Integra.Numerical
        Integra.Solver
        Integra.Special
        Integra.Derive
        Integra.Graph
    build-depends:    base ^>=4.20.2.0
    default-language: Haskell2010

executable integra
    import:           warnings
    main-is:          Main.hs
    hs-source-dirs:   app
    build-depends:
        base     ^>=4.20.2.0,
        integra,
        haskeline ^>=0.8,
        process  ^>=1.6
    default-language: Haskell2010

-- Web mode (requires zlib C library, e.g. libz-dev on Debian, zlib on macOS,
-- or run 'nix-shell -p zlib.dev' on NixOS before building)
executable integra-web
    import:           warnings
    main-is:          Web.hs
    hs-source-dirs:   app
    ghc-options:      -threaded
    build-depends:
        base       ^>=4.20.2.0,
        integra,
        aeson      ^>=2.2,
        scotty     ^>=0.22,
        text       ^>=2.1,
        bytestring ^>=0.12,
        http-types ^>=0.12,
        warp       ^>=3.4
    default-language: Haskell2010
